# development_of_statistical_analysis-

./: README.md  get_station_info.py  preprocess.ipynb  pyproject.toml
data/: lasso_params.csv  stations.csv
src/: consts.py  eda.py  preprocess.py  station.py
