[tool.poetry]
name = "development-of-statistical-analysis"
version = "0.1.0"
description = ""
authors = ["Yuhi-Aoki <yuhi.aoki@no-spare.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
lightgbm = "^4.3.0"
statsmodels = "^0.14.2"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
requests = "^2.32.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
asgl = "^1.0.5"
optuna = "^3.6.1"
optuna-integration = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
